--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <section id="skills" class="skills">
     <h2>Skills</h2>
+    <div class="skill-item">Python</div>
+    <div class="skill-item">Java</div>
     <div class="skill-item">HTML</div>
     <div class="skill-item">CSS</div>
     <div class="skill-item">JavaScript</div>
