--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:harivenkatcm048@gmail.com">harivenkarcm048@gmail.com</a></p>
+    <p>Email: <a href="mailto:harivenkatcm048@gmail.com">harivenkatcm048@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/hari-venkata-sai-mani-kumar-866076304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " target="_blank">Hari Kothapalli</a></p>
 </section>
 
